# lexrs

./: .gitignore  BENCHMARK.md  Cargo.toml  README.md  README.pypi.md  mkdocs.yml  pyproject.toml
.github/workflows/: build-wheels.yml  ci.yml  docs.yml  publish-crate.yml  publish-lexpy-shim.yml  release.yml
benchmarks/: README.md  benchmark.py  benchmark_batch.py  benchmark_genome.py  benchmark_summary.py  benchmark_workloads.py
docker/: Dockerfile  Dockerfile.reader  Dockerfile.writer  README.md  docker-compose.yml  nginx.conf
docs/: docker.md  index.md  python.md  rust.md  server.md
lexpy-shim/: README.md  pyproject.toml
lexpy-shim/lexpy/: __init__.py
lexpy-shim/tests/: test_shim.py
lexrs/: Cargo.toml  README.md
lexrs-server/: Cargo.toml  README.md
lexrs-server/src/: consul.rs  reader.rs  snapshot.rs  writer.rs
lexrs/src/: dawg.rs  error.rs  lib.rs  node.rs  python.rs  trie.rs  utils.rs
lexrs/tests/: dawg_tests.rs  trie_tests.rs
tests/: README.md  test_python_api.py
