[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "lexrs"
version = "0.1.0"
description = "Efficient lexicon data structures: Trie and DAWG"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Text Processing :: Indexing",
]

[tool.maturin]
features      = ["python"]
module-name   = "lexrs"
manifest-path = "lexrs/Cargo.toml"
