[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lexpy"
version = "2.0.0"
description = "Compatibility shim — lexpy is now powered by lexrs (Rust-backed)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["lexrs>=1.0"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Indexing",
]

[project.urls]
Homepage    = "https://github.com/aosingh/lexpy"
Source      = "https://github.com/aosingh/lexpy"
