[package]
name        = "lexrs-server"
version     = "0.1.0"
edition     = "2024"
description = "Production HTTP server for the lexrs lexicon library"
license     = "MIT"

[[bin]]
name = "writer"
path = "src/writer.rs"

[[bin]]
name = "reader"
path = "src/reader.rs"

[dependencies]
lexrs      = { path = "../lexrs" }
axum       = "0.8"
tokio      = { version = "1", features = ["full"] }
reqwest    = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
arc-swap   = "1"
uuid       = { version = "1", features = ["v4"] }
