[package]
name          = "lexrs-server"
version       = "0.2.0"
edition       = "2024"
description   = "Production HTTP server for the lexrs lexicon library"
authors       = ["Abhishek Singh <abhishek.singh20141@gmail.com>"]
license       = "MIT"
repository    = "https://github.com/aosingh/lexrs"
homepage      = "https://github.com/aosingh/lexrs"
documentation = "https://docs.rs/lexrs-server"
readme        = "README.md"
keywords      = ["trie", "dawg", "lexicon", "http", "server"]
categories    = ["data-structures", "text-processing", "web-programming"]

[[bin]]
name = "writer"
path = "src/writer.rs"

[[bin]]
name = "reader"
path = "src/reader.rs"

[dependencies]
lexrs      = { path = "../lexrs", version = "0.2" }
axum       = "0.8"
tokio      = { version = "1", features = ["full"] }
reqwest    = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
arc-swap   = "1"
uuid       = { version = "1", features = ["v4"] }
