[package]
name        = "lexrs"
version     = "0.2.0"
edition     = "2024"
description = "Efficient lexicon data structures: Trie and DAWG"
authors     = ["Abhishek Singh <abhishek.singh20141@gmail.com>"]
license     = "MIT"
repository  = "https://github.com/aosingh/lexrs"
homepage    = "https://github.com/aosingh/lexrs"
documentation = "https://docs.rs/lexrs"
readme      = "../README.md"
keywords    = ["trie", "dawg", "lexicon", "search", "nlp"]
categories  = ["data-structures", "text-processing"]

[lib]
name        = "lexrs"
crate-type  = ["cdylib", "rlib"]

[[bin]]
name = "genome_bench"
path = "src/bin/genome_bench.rs"

[dependencies]
thiserror = "1"
pyo3      = { version = "0.28", optional = true }

[features]
python = ["dep:pyo3", "pyo3/extension-module"]
